Organização de pastas

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<head>
 	<meta charset="utf-8">
 	<title>All Dev</title>
-	<link rel="stylesheet" href="reset.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>		
 	</head>
@@ -14,9 +14,9 @@
 	<body>
 		<header class="cabecalho-principal">
 			<div class="container">
-				<img class="logo" src="logo.png" alt="Logotipo da All Dev">
+				<img class="logo" src="img/logo.png" alt="Logotipo da All Dev">
 				<input class="pesquisa" type="text" name="pesquisa" placeholder="Busque por algo">
-				<img class="foto-perfil" src="foto-perfil.png" alt="Foto de perfil do usuário">			
+				<img class="foto-perfil" src="img/foto-perfil.png" alt="Foto de perfil do usuário">			
 			</div>		
 		</header>
 
@@ -25,11 +25,11 @@
 				<h2 class="menu-title">MENU</h2>
 				<ul class="menu-items">
 					<li class="editor-item">
-					<img class="icon-menu" src="icon_code.png">
+					<img class="icon-menu" src="img/icon_code.png">
 					<p class="title-menuitems">Editor de código</p>
 				</li>
 				<li class="comunidade-item">
-					<img class="icon-menu" src="icon_users.png">
+					<img class="icon-menu" src="img/icon_users.png">
 					<a href="comunidade.html"><p class="title-menuitems">Comunidade</p></a>
 				</li>
 				</ul>	
