Adição da imagem dos botões do Mac

--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@
 			</nav>
 			<div class="editor-container">
 				<div class="fundo-editor">	
-					<textarea class="editor-codigo" type="text" name="texto" autocomplete="off"> </textarea>
-					<input class="botao-visualizarMarcacao" type="submit" name="visualizar-marcacoes" value="Visualizar com o highlight">
-			</div>
+					<div class="mac">
+						<img class="mac-img" src="img/buttons.png" alt="Botões do Mac">	
+					</div>	
+					<textarea class="editor-codigo" type="text" name="texto" autocomplete="off">Digite seu código aqui...</textarea>
+				</div>
+				<input class="botao-visualizarMarcacao" type="submit" name="visualizar-marcacoes" value="Visualizar com o highlight">
 			</div>
 			<form class="configuracoes-projeto">
 				<h2 class="titulo-seuprojeto">SEU PROJETO</h2>	
