implementação da personalização da cor de fundo do editor

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 			<nav class="menu">
 				<h2 class="menu-title">MENU</h2>
 				<ul class="menu-items">
-					<a href="index.html">
-						<li class="editor-item">
+					<a href="index.html" editor-button>
+						<li class="editor-item-index">
 							<img class="icon-menu" src="img/icon_code.png">
 							<p class="title-menuitems">Editor de código</p>
 						</li>
 					</a>
-					<a href="comunidade.html">
-						<li class="comunidade-item">
+					<a href="comunidade.html" comunidade-buttom>
+						<li class="comunidade-item-index">
 							<img class="icon-menu" src="img/icon_users.png">
 							<p class="title-menuitems">Comunidade</p>
 						</li>
@@ -64,6 +64,7 @@
 				<input  class="input-color" type="color" data-input="color" value="#6BD1FF">	
 				<input  class="botao-salvar" type="submit" value="Salvar projeto">
 			</form>
+			<script type="text/javascript" src="index.js"></script>
 		</main>
 
 	</body>
