Implementação visual do grid com os projetos salvos

--- a/comunidade.html
+++ b/comunidade.html
@@ -6,10 +6,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>All Dev</title>
+	<script src="https://kit.fontawesome.com/467b64bc8b.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/header.css">
 	<link rel="stylesheet" href="css/menu.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/comunidade.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>		
 	</head>
@@ -23,28 +25,152 @@
 			</div>		
 		</header>
 
-		<main class="conteudo-principal">
+		<main class="comunidade-principal">
 			<nav class="menu">
 				<h2 class="menu-title">MENU</h2>
 				<ul class="menu-items">
 					<a href="index.html">
-						<li class="editor-item">
+						<li class="editor-item-comunidade">
 							<img class="icon-menu" src="img/icon_code.png">
 							<p class="title-menuitems">Editor de código</p>
 						</li>
 					</a>
 					<a href="comunidade.html">
-						<li class="comunidade-item">
+						<li class="comunidade-item-comunidade">
 							<img class="icon-menu" src="img/icon_users.png">
 							<p class="title-menuitems">Comunidade</p>
 						</li>
 					</a> 
-				
 				</ul>	
 			</nav>
-			<div class="editor-container">
-			</div>
+			<ul class="projetos-container">
+				<li class="projeto-item">
+					<div class="codigo-container">
+						<div class="macbuttons-editor">
+							<div class="mac">
+							<img class="mac-img" src="img/buttons.png" alt="Botões do Mac">
+						</div>
+						<code>aaaaaaaaaaaaaaaaaaaaaaaaaaaa</code>					
+						</div>
+					</div>
+					<div class="info-projeto">
+						<h2 class="titulo-projeto"> Sem título</h2>
+						<p class="descricao-projeto">Essa é a descrição do meu projeto.</p>
+					</div>
+					<div class="social-projeto">
+						<div class="comment-like">
+							<div class="comment">
+								<i class="fas fa-comment"></i>
+								<p class="comment-count">9</p>
+							</div>	
+							<div class="like">
+								<i class="fas fa-heart"></i>
+								<p class="like-count">9</p>
+							</div>							
+						</div>	
+						<div class="usuario">	
+							<img class="foto-perfil-mini" src="img/foto-perfil-mini.png">
+							<p class="id-usuario">@Harry</p>
+						</div>	
+					</div>
+					</div>
+				</li>
+				<li class="projeto-item">
+					<div class="codigo-container">
+						<div class="macbuttons-editor">
+							<div class="mac">
+							<img class="mac-img" src="img/buttons.png" alt="Botões do Mac">
+						</div>
+						<code>aaaaaaaaaaaaaaaaaaaaaaaaaaaa</code>					
+						</div>
+					</div>
+					<div class="info-projeto">
+						<h2 class="titulo-projeto"> Sem título</h2>
+						<p class="descricao-projeto">Essa é a descrição do meu projeto.</p>
+					</div>
+					<div class="social-projeto">
+						<div class="comment-like">
+							<div class="comment">
+								<i class="fas fa-comment"></i>
+								<p class="comment-count">9</p>
+							</div>	
+							<div class="like">
+								<i class="fas fa-heart"></i>
+								<p class="like-count">9</p>
+							</div>							
+						</div>	
+						<div class="usuario">	
+							<img class="foto-perfil-mini" src="img/foto-perfil-mini.png">
+							<p class="id-usuario">@Harry</p>
+						</div>	
+					</div>
+					</div>
+				</li>
+				<li class="projeto-item">
+					<div class="codigo-container">
+						<div class="macbuttons-editor">
+							<div class="mac">
+							<img class="mac-img" src="img/buttons.png" alt="Botões do Mac">
+						</div>
+						<code>aaaaaaaaaaaaaaaaaaaaaaaaaaaa</code>					
+						</div>
+					</div>
+					<div class="info-projeto">
+						<h2 class="titulo-projeto"> Sem título</h2>
+						<p class="descricao-projeto">Essa é a descrição do meu projeto.</p>
+					</div>
+					<div class="social-projeto">
+						<div class="comment-like">
+							<div class="comment">
+								<i class="fas fa-comment"></i>
+								<p class="comment-count">9</p>
+							</div>	
+							<div class="like">
+								<i class="fas fa-heart"></i>
+								<p class="like-count">9</p>
+							</div>							
+						</div>	
+						<div class="usuario">	
+							<img class="foto-perfil-mini" src="img/foto-perfil-mini.png">
+							<p class="id-usuario">@Harry</p>
+						</div>	
+					</div>
+					</div>
+				</li>
+				<li class="projeto-item">
+					<div class="codigo-container">
+						<div class="macbuttons-editor">
+							<div class="mac">
+							<img class="mac-img" src="img/buttons.png" alt="Botões do Mac">
+						</div>
+						<code>aaaaaaaaaaaaaaaaaaaaaaaaaaaa</code>					
+						</div>
+					</div>
+					<div class="info-projeto">
+						<h2 class="titulo-projeto"> Sem título</h2>
+						<p class="descricao-projeto">Essa é a descrição do meu projeto.</p>
+					</div>
+					<div class="social-projeto">
+						<div class="comment-like">
+							<div class="comment">
+								<i class="fas fa-comment"></i>
+								<p class="comment-count">9</p>
+							</div>	
+							<div class="like">
+								<i class="fas fa-heart"></i>
+								<p class="like-count">9</p>
+							</div>							
+						</div>	
+						<div class="usuario">	
+							<img class="foto-perfil-mini" src="img/foto-perfil-mini.png">
+							<p class="id-usuario">@Harry</p>
+						</div>	
+					</div>
+					</div>
+				</li>
+			</ul>
 		</main>
+		<script type="text/javascript" src="index.js"></script>
 
 	</body>
 
