--- a/comunidade.html
+++ b/comunidade.html
@@ -20,7 +20,7 @@
 
 	<body>
 		<header class="cabecalho">
-			<img class="cabecalho__logo" src="img/logo.svg" alt="Logotipo da All Dev">
+			<img class="cabecalho__logo" src="img/logo.png" alt="Logotipo da All Dev">
 			<input class="cabecalho__pesquisa-input text-input" type="text" name="pesquisa" placeholder="Busque por algo">
 			<section class="cabecalho__usuario">
 				<img class="cabecalho__usuario-foto" src="img/foto-perfil.svg" alt="Foto de perfil do usuário">
@@ -36,13 +36,13 @@
 			<nav class="menu-itens">
 				<ul class="menu__itens">
 					<a href="index.html" editor-button>
-						<li class="menu__editor--index">
+						<li class="menu__editor--comunidade">
 							<img class="icon-menu" src="img/icon_code.png">
 							<p class="menu__editor-item-titulo menu__item-name">Editor de código</p>
 						</li>
 					</a>
 					<a href="comunidade.html" comunidade-buttom>
-						<li class="menu__comunidade--index">
+						<li class="menu__comunidade--comunidade">
 							<img class="icon-menu" src="img/icon_users.png">
 							<p class="menu__editor-item-titulo menu__item-name">Comunidade</p>
 						</li>
