--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
 					</a> 
 				</ul>	
 			</nav>
-			<section class="editor-container">
-				<div class="fundo-editor">	
+			<section class="editor">
+				<div class="editor__fundo">	
 					<div class="mac">
 						<img class="mac-img" src="img/mac_buttons.svg" alt="Botões do Mac">	
 					</div>
-					<div class="codigo-wrapper">
-						<code class="editor-codigo hljs" contenteditable="true">Digite seu código aqui...</code>
+					<div class="editor__wrapper">
+						<code class="editor__codigo hljs" contenteditable="true">Digite seu código aqui...</code>
 					</div>	
 					<!--<textarea class="editor-codigo" type="text" name="texto" autocomplete="off">Digite seu código aqui...</textarea>-->
 				</div>
