Alterar formato imagem botao like

--- a/comunidade.html
+++ b/comunidade.html
@@ -107,7 +107,7 @@ return go(f, seed, [])
 								<p class="comment-count">9</p>
 							</div>	
 							<div class="like">
-								<img class="like__icone" src="img/favorite_icon.svg">
+								<img class="like__icone" src="img/favorito-icone.svg">
 								<p class="like__contagem">9</p>
 							</div>							
 						</div>	
@@ -148,7 +148,7 @@ return go(f, seed, [])
 								<p class="comment-count">9</p>
 							</div>	
 							<div class="like">
-								<img class="like__icone" src="img/favorite_icon.svg">
+								<img class="like__icone" src="img/favorito-icone.svg">
 								<p class="like__contagem">9</p>
 							</div>							
 						</div>	
@@ -189,7 +189,7 @@ return go(f, seed, [])
 								<p class="comment-count">9</p>
 							</div>	
 							<div class="like">
-								<img class="like__icone" src="img/favorite_icon.svg">
+								<img class="like__icone" src="img/favorito-icone.svg">
 								<p class="like__contagem">9</p>
 							</div>							
 						</div>	
@@ -237,7 +237,7 @@ div {
 								<p class="comment-count">9</p>
 							</div>	
 							<div class="like">
-								<img class="like__icone" src="img/favorite_icon.svg">
+								<img class="like__icone" src="img/favorito-icone.svg">
 								<p class="like__contagem">9</p>
 							</div>							
 						</div>	
