Salvamento de dados no localStorage

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width initial-scale=1.0">
 	<title>All Dev</title>
+	<link rel="icon" href="img/tab-icon.png">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/base.css">
 	<link rel="stylesheet" type="text/css" href="css/seaside.css">
@@ -107,7 +108,7 @@
 				</section>	
 				<input  class="botao-salvar" type="submit" value="Salvar projeto">
 			</form>
-			<script type="text/javascript" src="javascript/index.js"></script>
+			<script type="module"  src="javascript/main.js"></script>
 			<script type="text/javascript" src="javascript/cabecalhoBotoes.js"></script>
 		</main>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
