Exibição de cards salvos

--- a/comunidade.html
+++ b/comunidade.html
@@ -267,6 +267,7 @@ div {
 				</li>
 			</ul>
 		</main>
+		<script type="module" src="javascript/displayCards.js"></script>
 		<script type="text/javascript" src="javascript/cabecalhoBotoes.js"></script>
 		<script type="text/javascript" src="javascript/registrarLike.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
