Correção de bug no carregamento de códigos em html

--- a/comunidade.html
+++ b/comunidade.html
@@ -77,7 +77,7 @@
 			</nav>
 			<ul class="projetos">
 				<li class="projeto__item">
-					<div class="codigo-container cartao1">
+					<div class="codigo-container cartao1" id="codigo-container">
 						<div class="projeto__editor">
 							<div class="mac">
 							<img class="mac-img" src="img/mac_buttons.svg" alt="Botões do Mac">
@@ -270,6 +270,7 @@ div {
 		<script type="module" src="javascript/displayCards.js"></script>
 		<script type="text/javascript" src="javascript/cabecalhoBotoes.js"></script>
 		<script type="text/javascript" src="javascript/registrarLike.js"></script>
+		<script type="module" src="javascript/export.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
 		<script>hljs.highlightAll()</script>
 	</body>
